syntax = "proto3";

package party_node;

service PartyNode {
    rpc StartMessageStream (stream SendRequests) returns (SendResponse);
}

message SendRequest {
    uint32 session_id = 1;
    bytes data = 2;
}

message SendRequests {
    repeated SendRequest requests = 1;
}

message SendResponse {}